kubernetes/apps/monitoring/kubernetes-dashboard/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-http-route
  namespace: monitoring
spec:
  hostnames:
    - dashboard.tivoli.negative7.com
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kubernetes-dashboard-auth
          namespace: monitoring
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api/v1/login
        - path:
            type: PathPrefix
            value: /api/v1/csrftoken/login
        - path:
            type: PathPrefix
            value: /api/v1/me
    - backendRefs:
        - name: kubernetes-dashboard-api
          namespace: monitoring
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /metrics
    - backendRefs:
        - name: kubernetes-dashboard-web
          namespace: monitoring
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /
